<resources>
    <string name="app_name">IROOM</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="verify_phone_number_message">Authentication code have to be sent to your phone number, check it and fill code to below box</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iroom">Iroom</string>
    <string name="welcome">Welcome to Iroom</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="signup_with_phone_number">SignUp with phone number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="hint000000">000000</string>
    <string name="next">Next</string>
    <string name="full_name">Full name</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="where_do_you_want_to_go">Where do you want to go ?</string>
    <string name="hanoi">Hanoi</string>
    <string name="service_apartment">Service apartment</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="my_collections">My Collections</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="paid">Paid</string>
    <string name="bank_transfer_only_supported">Bank transfer (only supported)</string>
    <string name="fill_order_id_in_bank_transfer_message">Fill order id in bank transfer message</string>
    <string name="remain_time">Remain Time:</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="booking">Booking</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="price">Price</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="apply">Apply</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="suggestion">Suggestion</string>
    <string name="feedback">Feedback</string>
    <string name="loading">Loading</string>
    <string name="phone_number">Phone number</string>
    <string name="figures">%d guest - %d bedroom - %d bath"</string>
    <string name="apartment_count">%d apartments</string>
    <string name="my_orders">My Orders</string>
    <string name="order_has_accepted">Order has accepted</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="my_rooms">My Rooms</string>
    <string name="add_new">New</string>
    <string name="edit">Edit</string>
    <string name="reload">Reload</string>
    <string name="other_fee_tax_clean">Other fee (tax + clean)</string>
    <string name="create">Create</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="host">Host</string>
    <string name="customer">Customer</string>

    <string-array name="gender_menu">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>